--- a/gamdb/films/templates/main.html
+++ b/gamdb/films/templates/main.html
@@ -8,29 +8,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-   
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2">
-        {%for movie in movies%}
+   <div class="container my-5">
+        <h1>Filmy</h1>
+        <div class="row row-cols-1  row-cols-md-2 row-cols-lg-3 g-2">
+            {% for movie in movies %}
             <div class="col">
-                <div class="card" > 
-                    <img src="http://placekitten.com/200/100" class="card-img-top" alt="...">
+                <div class="card h-100">
+                    <img class="card-img-top" src="https://place-hold.it/180x100/" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">{{movie.name}}</h5>
-                        <p class="card-text">{{movie.description}}</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">{{ movie.name }}</h5>
+                        <p class="card-text ">{{ movie.description }}</p>
+                    </div>
+                    <div class="card-footer text-end">
+                        <a href="#" class="btn btn-primary">Detaily</a>
                     </div>
                 </div>
-                {% endfor %} 
             </div>
-        </div> 
+                
+            {% endfor %}
+        </div>
     </div>
-</div>
-     
-  
-       
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
-</div>
+
 </body>
 </html>
