--- a/gamdb/films/templates/movies.html
+++ b/gamdb/films/templates/movies.html
@@ -7,6 +7,27 @@
 
 {% block content %}
 <h1>Filmy</h1>
+<div class="row">
+    <form action="./"method="get">
+        <div class="input-group mb-3">
+            <input type="text" name ="search"class="form-control" value="{{}}"
+             placeholder="..." aria-label="search" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Submit</button>
+        </div>
+    </form>
+</div>
+<div class="row">
+    <ul class="list-inline">
+        <li class="list-inline-item">
+        <a href="./" class="btn btn-outline-primary">All</a>
+    </li>
+    <li class="list-inline-item">
+        {%for g in genres%}
+        <a href="./" class="btn btn-outline">  {{g.name}}</a>
+        {%endfor%}
+    </li>
+    </ul>
+</div>
 <div class="row row-cols-1  row-cols-md-2 row-cols-lg-3 g-2">
     {% for movie in movies %}
     <div class="col">
@@ -14,6 +35,9 @@
             <img class="card-img-top" src="https://place-hold.it/180x100/" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">{{ movie.name }}</h5>
+                {% for g in movie.genres.all%}
+                <span class="badge text-bg-dark">{{g.name}}</span>
+                {%endfor%}
                 <p class="card-text ">{{ movie.description }}</p>
             </div>
             <div class="card-footer text-end">
