--- a/gamdb/films/templates/movies.html
+++ b/gamdb/films/templates/movies.html
@@ -10,8 +10,7 @@
 <div class="row">
     <form action="./"method="get">
         <div class="input-group mb-3">
-            <input type="text" name ="search"class="form-control" value="{{}}"
-             placeholder="..." aria-label="search" aria-describedby="button-addon2">
+            <input type="text" name="search" value="{{ search|default:"" }}" class="form-control" placeholder="..." aria-label="Hledat" aria-describedby="button-addon2">
             <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Submit</button>
         </div>
     </form>
@@ -19,33 +18,32 @@
 <div class="row">
     <ul class="list-inline">
         <li class="list-inline-item">
-        <a href="./" class="btn btn-outline-primary">All</a>
-    </li>
-    <li class="list-inline-item">
-        {%for g in genres%}
-        <a href="./" class="btn btn-outline">  {{g.name}}</a>
-        {%endfor%}
-    </li>
+            <a class="btn {% if not genre %}btn-primary{% else %}btn-outline-secondary{% endif %}" href="./">All</a>
+        </li>
+        {% for g in genres %}
+        <li class="list-inline-item">
+            <a class="btn {% if g.name == genre %}btn-primary{% else %}btn-outline-secondary{% endif %}" href="./?genre={{ g.name }}">{{ g.name }}</a>
+        </li>
+        {% endfor %}
     </ul>
 </div>
 <div class="row row-cols-1  row-cols-md-2 row-cols-lg-3 g-2">
     {% for movie in movies %}
     <div class="col">
         <div class="card h-100">
-            <img class="card-img-top" src="https://place-hold.it/180x100/" alt="Card image cap">
+            <img class="card-img-top" src="{% if movie.image_url %}{{movie.image_url}}{% else %}https://place-hold.it/180x100/{% endif %}" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">{{ movie.name }}</h5>
-                {% for g in movie.genres.all%}
-                <span class="badge text-bg-dark">{{g.name}}</span>
-                {%endfor%}
-                <p class="card-text ">{{ movie.description }}</p>
+                {% for genre in movie.genres.all %}
+                    <span class="badge rounded-pill text-bg-primary">{{genre.name}}</span>
+                {% endfor %}
+                <p class="card-text ">{{ movie.description|truncatewords_html:"20" }}</p>
             </div>
             <div class="card-footer text-end">
-                <a href="#" class="btn btn-primary">Detaily</a>
+                <a href="{% url 'movie' movie.id %}" class="btn btn-primary">Detaily</a>
             </div>
         </div>
     </div>
-        
     {% endfor %}
 </div>
 {% endblock content %}
