--- a/gamdb/films/templates/movies.html
+++ b/gamdb/films/templates/movies.html
@@ -31,7 +31,7 @@
     {% for movie in movies %}
     <div class="col">
         <div class="card h-100">
-            <img class="card-img-top" src="{% if movie.image_url %}{{movie.image_url}}{% else %}https://place-hold.it/180x100/{% endif %}" alt="Card image cap">
+            <img class="card-img-top" src="{% if movie.image_url %}{{movie.image_url}}{% else %}https://placekitten.com/g/360/200{% endif %}" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">{{ movie.name }}</h5>
                 {% for genre in movie.genres.all %}
