--- a/gamdb/films/templates/homepage.html
+++ b/gamdb/films/templates/homepage.html
@@ -2,4 +2,5 @@
 
 {% block content %}
 <h1>Homepage GA Movies DB</h1>
+<img src="https://placekitten.com/g/860/600" class="card-img-top" alt="...">
 {% endblock %}
