--- a/gamdb/films/templates/directors.html
+++ b/gamdb/films/templates/directors.html
@@ -16,7 +16,7 @@
             &ndash; {{ d.birth_year }}
             {% endif %}</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href=# class="btn btn-light">Detaily</a>
         </div>
     </div>
     {% endfor %}
