--- a/gamdb/films/templates/director.html
+++ b/gamdb/films/templates/director.html
@@ -7,5 +7,6 @@
 {% block content %}
 <h1>{{director.name}}</h1>
 <h2>{{director.birth_year}}</h2>
+<img src="https://placekitten.com/g/200/150" class="card-img-top" alt="...">
 <p>{{ director.description|safe }}</p>
 {% endblock content %}
