--- a/gamdb/films/templates/main.html
+++ b/gamdb/films/templates/main.html
@@ -26,6 +26,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'directors' %}">Režiséři</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'actors' %}">Herci</a>
+              </li>
             </ul>
           </div>
         </div>
