--- a/gamdb/films/templates/movie.html
+++ b/gamdb/films/templates/movie.html
@@ -32,6 +32,8 @@
 <div class="mb-2">
     <strong>
     {{comment.author}} </strong> {{comment.created_at|date:"j. n. Y"}}
+    <br>
+    rating:{{comment.rating}}%
 <br>
  {{comment.text}}
 </div>
